# ai-weeklynewsletter-generator

./: .gitignore  README.md  app.py  generate_newsletter.py  ingest_data.py  process_analyze.py  pyproject.toml
.github/workflow/: scheduler.yml
.github/workflows/: scheduler.yml
data/: processed_newsletter_items.jsonl
newsletter_outputs/: llmops_newsletter_2026-05-07.md  llmops_newsletter_2026-05-14.md
