[project]
name = "ai-weeklynewsletter-generator"
version = "0.1.0"
description = "Automated pipeline to ingest AI/LLM content and generate a weekly internal newsletter."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "datasets>=4.8.0",
  "pandas>=2.2.0",
  "pyarrow>=15.0.0",
  "streamlit>=1.30.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"


[tool.setuptools]
py-modules = []